# lookback

./: .editorconfig  README.md  lookback.sh  pyproject.toml
.github/workflows/: publish.yml  testpublish.yml
src/: lookback.py  triplecheck.py
tests/: test_triplecheck.py
